--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,15 @@ plugins {
   id 'elasticsearch.run-ccs'
   id 'elasticsearch.release-tools'
   id 'elasticsearch.versions'
+  id("org.sonarqube") version "4.3.1.3277"
 }
 
+sonar {
+  properties {
+    property("sonar.projectKey", "vivek-reghunath-sonarsource_elasticsearch_AYuBAIANTjRXavMxW9d0")
+    property("sonar.projectName", "elasticsearch")
+  }
+}
 /**
  * This is a convenient method for declaring test artifact dependencies provided by the internal
  * test artifact plugin. It replaces basically the longer dependency notation with explicit capability
@@ -397,14 +404,3 @@ tasks.register("spotlessApply").configure {
   dependsOn gradle.includedBuild('build-tools').task(':reaper:spotlessApply')
   dependsOn gradle.includedBuild('build-tools-internal').task(':spotlessApply')
 }
-plugins {
-  id "org.sonarqube" version "4.3.1.3277"
-}
-
-sonar {
-  properties {
-    property "sonar.projectKey", "vivek-reghunath-sonarsource_elasticsearch_AYuBAIANTjRXavMxW9d0"
-    property "sonar.projectName", "elasticsearch"
-  }
-}
-
